# AI-chatapp

backend/: briefing.py  config.py  intro.py  main copy.py  main.py  models.py  pyproject.toml  questions.old.py  questions.py  requirements.py  supervisor.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx  Chat.jsx  Client.js  Message.jsx  Question.jsx  Thread.jsx  index.css  stream.js
